# scw-py-client

./: .gitignore  README.md  certificate_authority_data  example.py  functions.py  functions_example..py  object_storage.py  rdb.py  rdb_example.py  registry.py  registry_example.py  requirements.txt  scaleway_api.py  scw_api.py  scw_functions_sdk.py  scw_rdb_sdk.py  scw_registry_sdk.py  scw_sdk.py  setup.cfg
api/: scaleway_api.py  scaleway_database_api.py  scaleway_functions_api.py  scaleway_registry_api.py  scw_database_sdk.py  scw_sdk.py
models/: container.py  cron.py  function.py  log.py  namespace.py  pagination.py  region.py
models/functions/: container.py  cron.py  function.py  log.py  namespace.py
models/rdb/: database.py  instance.py  privileges.py  user.py
models/registry/: image.py
sdk/: scw_functions_sdk.py  scw_rdb_sdk.py  scw_registry_sdk.py  scw_sdk.py
src/scw_py_client/: client_api.py  core.py
src/scw_py_client/models/: functions.py  k8s.py  rdb.py  registry.py
src/scw_sdk/: base_api.py  core.py
src/scw_sdk/models/: functions.py  registry.py
