[metadata]
name = scw-py-client
version = 0.0.5
author = italents
author_email = author@example.com
description = scaleway python client to interact with the scaleway API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/italents/scw-py-client
project_urls =
    Bug Tracker = https://github.com/italents/scw-py-client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	pydantic
	requests
	boto3

[options.packages.find]
where = src
